# senkora

./: .gitignore  .gitmodules  CMakeLists.txt  CODING_STYLE.md  LICENSE  README.md  boilerplate.cpp  compile_commands.json  config.h  data.js  hello.cpp  hello.js  main  make.sh  runtests.sh  shell.nix  test.toml
.github/workflows/: nightly.yml
benchmarks/fs/: bun.js  node.mjs  senkora.js
benchmarks/toml/: bun.js  senkora.js
src/: boilerplate.cpp  boilerplate.hpp  cli.cpp  cli.hpp  eventLoop.cpp  eventLoop.hpp  fetch.cpp  fetch.hpp  globalThis.cpp  globalThis.hpp  hello.cpp  main.cpp  moduleResolver.cpp  moduleResolver.hpp  peekaboo.cpp  peekaboo.hpp  project.cpp  project.hpp
src/api/: Error.cpp  Error.hpp  ObjectBuilder.cpp  ObjectBuilder.hpp  Scent.hpp  Senkora.cpp  Senkora.hpp  module.cpp  module.hpp  toml.cpp  toml.hpp
src/modules/: dummy.cpp  dummy.hpp  empty.cpp  empty.hpp  modules.cpp  modules.hpp
src/modules/fs/: api.c  api.h  mod.cpp  mod.hpp
src/modules/test/: constants.cpp  constants.hpp  matchers.cpp  matchers.hpp  mod.cpp  mod.hpp
src/modules/toml/: mod.cpp  mod.hpp
tests/: buitlin-modules.js  data.js  errors.test.js  eventLoop.js  exception.js  expect.test.js  fetch.test.js  fs.js  fs.test.js  hello.js  importTest2.js  json.test.js  main.js  newData.js  senkora.js  senkora.test.js  toml.js  toml.test.js
tests/fs/: advanced.js  simple.js
tests/pth/: ahoj.js  kk.js
tests/test/: errors.test.js  main.test.js
